--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <a href="https://accounts.google.com" target="_blank" class="black-text">Sign In</a></div>
           </div>
           <div class="col s6 m6 l6">
-            <i class="fab fa-mail fa-5x"></i><br>
+            <i class="fas fa-envelope fa-5x"></i><br>
             <div class="oui-button transparent blue-text">
               <a href="gm.html" class="black-text">Gmail</a></div>
           </div>
