--- a/gm.html
+++ b/gm.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-  <meta http-equiv="refresh" content="1;https://mail.google.com">
+  <!-- <meta http-equiv="refresh" content="1;https://mail.google.com"> -->
   <meta name="description" content="GM">
   <title lang="en-us">Loading Gmail...</title>
   <link rel="stylesheet" href="OneUI/oui.min.css">
