--- a/index.html
+++ b/index.html
@@ -82,15 +82,20 @@
       <div class="oui-bubble">
         <h1 class="hide"></h1>
         <div class="row">
-          <div class="col s6 m6 l6">
+          <div class="col s4 m4 l4">
             <i class="fas fa-user fa-5x"></i><br>
             <div class="oui-button transparent blue-text">
               <a href="https://accounts.google.com" target="_blank" class="black-text">Sign In</a></div>
           </div>
-          <div class="col s6 m6 l6">
+          <div class="col s4 m4 l4">
             <i class="fas fa-envelope fa-5x"></i><br>
             <div class="oui-button transparent blue-text">
               <a href="gm.html" class="black-text">Gmail</a></div>
+          </div>
+          <div class="col s4 m4 l4">
+            <i class="fas fa-file-import fa-5x"></i><br>
+            <div class="oui-button transparent blue-text">
+              <a href="https://online2pdf.com" target="_blank" class="black-text">Converter</a></div>
           </div>
         </div>
       </div>
